workarond for not shown keyboard at smdk4412 model
Change-Id: Ie3b0ac99dda336c29656cc727f5bf831caf97677

--- a/core/res/res/values/cm_symbols.xml
+++ b/core/res/res/values/cm_symbols.xml
@@ -31,6 +31,7 @@
     <java-symbol type="id" name="filtered_item_container" />
 
     <java-symbol type="bool" name="config_forceDisableHardwareKeyboard" />
+    <java-symbol type="bool" name="config_forceShowImeWithHardKeyboard" />
     <java-symbol type="bool" name="skip_radio_power_off_on_sim_refresh_reset" />
     <java-symbol type="bool" name="config_ascii_7bit_support_for_long_message" />
     <java-symbol type="bool" name="config_lte_capable" />
